# causal-impact-playground

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
docs/: index.html
src/: __init__.py  data.py  estimation.py  viz.py
tests/: test_data.py  test_estimation.py  test_viz.py
