[project]
name = "causal-impact-playground"
version = "0.1.0"
description = "施策前後比較・A/Bテスト・DID の違いを可視化する因果推論学習アプリ（合成データ）"
requires-python = ">=3.11"
dependencies = [
    "altair>=5",
    "streamlit>=1.32",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
